--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 19
+    - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
-        java-version: '19'
+        java-version: '21'
         distribution: 'adopt'
-    - name: Run testcase
+    - name: Run test
       run: |
         ./gradlew test
